src/objects/Contact__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Адреса</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <label>Телефон</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <formula>IF(
  GeneralPrice__c &lt; 10000,
  &quot;🟢&quot;,
  IF(
    GeneralPrice__c  &lt;= 40000,
    &quot;🟡&quot;,
    &quot;🔴&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Статус Кліента</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Коментар</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Витрати</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinalPrice__c</fullName>
        <inlineHelpText>Ціна, яку затверджено з покупцем в ході розгляду і затвердження замовлення.</inlineHelpText>
        <label>Фінальна ціна</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GeneralDiscount__c</fullName>
        <label>Спеціальні умови</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>2 %</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 %</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 %</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 %</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 %</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 %</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8 %</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 %</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13 %</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>14 %</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15 %</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeneralPrice__c</fullName>
        <label>Сумма всіх штор</label>
        <summarizedField>Curtain__c.GeneralPrice__c</summarizedField>
        <summaryFilterItems>
            <field>Curtain__c.GeneralPrice__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Curtain__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SelectedCurtains__c</fullName>
        <label>Сума вибраних штор</label>
        <summarizedField>Curtain__c.GeneralPrice__c</summarizedField>
        <summaryFilterItems>
            <field>Curtain__c.Check__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Curtain__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Контакт</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ClientName__c</columns>
        <columns>Address__c</columns>
        <columns>GeneralPrice__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Client_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ім&apos;я</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Контакти</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>